--- a/package.json
+++ b/package.json
@@ -5,5 +5,20 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "men_deliverable",
+  "description": "# Part One. Create and Read.",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://git.generalassemb.ly/nabiladigo/MEN_Deliverable.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
